# UmbraCore

./: -k  -verbose  .bazelrc  .bazelrc.local  .gazelle.language-swift.yaml  .gazelle.yaml  .gitignore  020425_build.json  BUILD.bazel  Cargo.toml  MIGRATION_GUIDE.md  MODULE.bazel  Package.resolved  Package.swift  README.md  build.json  build_errors.json  build_generator  build_output.json  ci_config.yml  codecov.yml  crypto_analysis.json  custom_output.json  fix_build_files.rs  migration_archive_log_20250327_170733.txt  migration_archive_log_20250328_131115.txt  migration_archive_log_20250328_184958.txt  migration_status.json  missing_types.json  swift_rules.bzl  swift_target_mapping.json
ErrorHandling/Core/: BUILD.bazel  ErrorFactory.swift  GenericUmbraError.swift
ErrorHandling/Domains/: BUILD.bazel  CryptoErrors.swift  SecurityErrors.swift  SecurityProtocolsErrors.swift  UmbraErrors.swift
ErrorHandling/Interfaces/: BUILD.bazel  ErrorHandlingInterfaces.swift
ErrorHandling/Mapping/: BUILD.bazel  ErrorMapper.swift  ErrorRegistry.swift  SecurityErrorMapper.swift
Examples/UmbraErrors/: BUILD.bazel  ErrorHandlingExamples.swift
Legacy-Archive/: BUILD.bazel  README.md
Sources/Config/: BUILD.bazel
Sources/Config/Protocols/: BUILD.bazel
Sources/Core/: BUILD.bazel  BUILD.bazel.orig  Core.swift  Core_Aliases.swift
Sources/Core/Extensions/: BUILD.bazel
Sources/Core/Services/: BUILD.bazel  CoreService.swift  CryptoError.swift  CryptoService.swift  KeyManager.swift  SecurityError.swift  SecurityService.swift  ServiceContainer.swift  UmbraService.swift
Sources/Core/UmbraCore/: BUILD.bazel  UmbraCore.swift
Sources/CoreDTOs/: BUILD.bazel  ModuleExports.swift
Sources/CoreDTOs/Documentation.docc/: BUILD.bazel  CoreDTOsDocumentationPackage.swift
Sources/CoreDTOs/Sources/: BUILD.bazel  ErrorTypes.swift  ErrorTypesCompat.swift
Sources/CoreDTOs/Tests/: BUILD.bazel  CoreDTOsTestsPackage.swift
Sources/CoreErrors/: BUILD.bazel  CoreErrors_Extensions.swift  CryptoError.swift  CryptoErrorMapper.swift  KeyManagerError.swift  SecurityError.swift  SecurityErrorMapper.swift  ServiceError.swift  XPCErrors_Extensions.swift
Sources/CoreErrors/Tests/: BUILD.bazel  CoreErrorsDefinitionTests.swift  ErrorConsolidationTests.swift  ErrorMappingTests.swift  ErrorPropagationTests.swift
Sources/CoreServicesTypes/: BUILD.bazel  KeyMetadata.swift  KeyStatus.swift
Sources/CoreTypesImplementation/: BUILD.bazel
Sources/CoreTypesImplementation/Sources/: BUILD.bazel  CoreTypesImplementation.swift  DefaultCoreProvider.swift  ErrorAdapters.swift
Sources/CoreTypesImplementation/Tests/: BUILD.bazel  CoreProviderTests.swift  ErrorAdaptersTests.swift
Sources/CoreTypesInterfaces/: BUILD.bazel  Exports.swift
Sources/CoreTypesInterfaces/Sources/: BUILD.bazel  CoreProvider.swift  CoreTypesExtensions.swift  CoreTypesInterfaces.swift  ErrorTypes.swift
Sources/CoreTypesInterfaces/Tests/: BUILD.bazel  SecureDataTests.swift
Sources/Crypto/: BUILD.bazel
Sources/CryptoInterfaces/: BUILD.bazel  CryptoInterfaces.swift
Sources/CryptoSwiftFoundationIndependent/: BUILD.bazel  CryptoWrapper.swift
Sources/CryptoTypes/: BUILD.bazel  CryptoTypes_Aliases.swift
Sources/CryptoTypes/Interfaces/: XPCInterfaces.swift
Sources/CryptoTypes/Protocols/: BUILD.bazel
Sources/CryptoTypes/Services/: BUILD.bazel  CredentialManager.swift  DefaultCryptoService.swift
Sources/CryptoTypes/Types/: BUILD.bazel  CredentialManager.swift  SecureStorageData.swift
Sources/ErrorHandling/: BUILD.bazel  ErrorHandling.swift
Sources/ErrorHandling/Common/: BUILD.bazel  ErrorContext.swift  ErrorSeverity+SwiftyBeaver.swift  ErrorSeverity.swift
Sources/ErrorHandling/Core/: BUILD.bazel  ErrorFactory.swift  ErrorHandler.swift
Sources/ErrorHandling/Domains/: ApplicationCoreErrors.swift  ApplicationError.swift  ApplicationErrorBase.swift  ApplicationErrors.swift  ApplicationLifecycleErrors.swift  ApplicationUIErrors.swift  BUILD.bazel  BookmarkCoreErrors.swift  BookmarkErrorBase.swift  CryptoCoreErrors.swift  CryptoErrorBase.swift  ErrorTypeTranslators.swift  LoggingCoreErrors.swift  LoggingErrorBase.swift  NetworkCoreErrors.swift  NetworkErrorBase.swift  NetworkErrors.swift  NetworkHTTPErrors.swift  NetworkSocketErrors.swift  RepositoryCoreErrors.swift  RepositoryError.swift  RepositoryErrorBase.swift  RepositoryErrorDomain.swift  ResourceCoreErrors.swift  ResourceErrorBase.swift  ResourceFileErrors.swift  ResourcePoolErrors.swift  SecurityCoreErrors.swift  SecurityError.swift  SecurityErrorBase.swift  SecurityErrorDomain.swift  SecurityErrors.swift  SecurityProtocolErrors.swift  SecurityXPCErrors.swift  SharedErrorDomains.swift  StorageErrors.swift  UmbraErrorExtensions.swift  UmbraErrors.swift  XPCCoreErrors.swift  XPCErrorBase.swift  (+1 more)
Sources/ErrorHandling/Examples/: BUILD.bazel  ErrorLoggingExample.swift
Sources/ErrorHandlingInterfaces/: BUILD.bazel  ErrorHandlingInterfaces.swift
Sources/FileSystemService/: BUILD.bazel
Sources/Integration/: BUILD.bazel
Sources/KeyManagementTypes/: BUILD.bazel  KeyManagementTypes.swift
Sources/LoggingWrapper/: BUILD.bazel  Logger.swift
Sources/ObjCBridgingTypesFoundation/: BUILD.bazel  XPCServiceProtocolBase.swift
Sources/Repositories/: BUILD.bazel  FileSystemRepository.swift  Repositories_Aliases.swift  RepositoryService+HealthCheck.swift  RepositoryService+Locking.swift  RepositoryService+Maintenance.swift  RepositoryService+Validation.swift  RepositoryService.swift
gazelle-swift/: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  go.sum  swift_build_fixer
tools/: BUILD.bazel
tools/bazel-build-analyzer/: README.md  bazel-build-analyzer  bazel_build_results.json  bazel_targets.json  go.mod
tools/build_defs/: umbracore_gen_module.bzl  umbracore_module.bzl
tools/build_generator/: BUILD.bazel
tools/build_rebuilder/: BUILD.bazel
tools/buildfix/: buildfix  go.mod  go.sum
tools/code_manager/: BUILD.bazel
tools/gazelle/: BUILD.bazel
tools/namespace_analyzer/: BUILD.bazel
tools/swift/: BUILD.bazel  build_rules.bzl  build_settings.bzl  compiler_options.bzl
(+1443 files in other folders)
