load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/umbracore
# gazelle:build_file_name BUILD.bazel

gazelle(name = "gazelle")

# Special target for applying UmbraCore-specific BUILD file modifications
genrule(
    name = "umbra_custom_build_fixes",
    srcs = [],
    outs = ["umbra_build_fixes.marker"],
    cmd = """
        # This will be run after gazelle to apply UmbraCore-specific fixes
        # Find all Swift BUILD files and apply typealias policy and custom rules
        touch $(OUTS)
    """,
    visibility = ["//visibility:public"],
)

# Platform definitions
platform(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

platform(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)
