# Legacy Archive BUILD file
# This directory contains archived code that has been migrated to the Alpha Dot Five architecture.
# No targets in this directory should be depended upon by production code.

package(default_visibility = ["//visibility:public"])

# This filegroup is provided only for documentation and reference purposes
filegroup(
    name = "legacy_archive_sources",
    srcs = glob(["Sources/**"]),
)
