load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "ErrorHandlingDomains",
    srcs = glob(["*.swift"]),
    module_name = "ErrorHandlingDomains",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/ErrorHandling/Interfaces:ErrorHandlingInterfaces",
    ],
)
