load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "ErrorHandlingMapping",
    srcs = glob(
        ["*.swift"],
        allow_empty = True,
    ),
    copts = [
        "-enable-library-evolution",
    ],
    module_name = "ErrorHandlingMapping",
    visibility = ["//visibility:public"],
    deps = [
        "//ErrorHandling/Core:ErrorHandlingCore",
        "//ErrorHandling/Domains:ErrorHandlingDomains",
        "//ErrorHandling/Interfaces:ErrorHandlingInterfaces",
    ],
)
