load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "UmbraErrorsExamples",
    srcs = glob(["*.swift"]),
    deps = [
        "//Sources/ErrorHandlingInterfaces",
        "//Sources/UmbraErrors/Core:UmbraErrorsCore",
        "//Sources/UmbraErrors/Domains",
        "//Sources/UmbraErrors/DTOs",
        "//Sources/UmbraErrors/Mapping",
        "//Sources/UmbraErrors/Utilities",
        "//Sources/CoreErrors",
    ],
    visibility = ["//visibility:public"],
)
