load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "UmbraErrorsExamples",
    srcs = glob(["*.swift"]),
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/CoreErrors",
        "//Sources/ErrorHandlingDomains",
        "//Sources/ErrorHandlingInterfaces",
        "//Sources/SecurityTypes",
        "//Sources/UmbraErrors",
        "//Sources/UmbraErrors/Core:UmbraErrorsCore",
        "//Sources/UmbraErrors/DTOs",
        "//Sources/UmbraErrors/Domains",
        "//Sources/UmbraErrors/Mapping",
    ],
)
