load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "Core",
    srcs = glob(
        ["*.swift"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/ObjCBridgingTypesFoundation",
        "//Sources/XPCProtocolsCore",
    ],
)

# Uncomment if documentation generation is needed
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
#
# swift_package(
#     name = "docc_documentation",
#     srcs = glob([
#         "**/*.swift",
#         "**/*.docc/**",
#     ] , allow_empty = True),
#     deps = ["//Sources/Core"],
# )
