load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "Core",
    srcs = glob(
        [
            "*.swift",
            "**/*.swift"
        ],
        exclude = [
            "**/Tests/**",
            "**/*Test.swift",
            "**/*.generated.swift"
        ],
        exclude_directories = 1,
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/CoreDTOs",
        "//Sources/ErrorHandling",
        "//Sources/ObjCBridgingTypesFoundation",
        "//Sources/UmbraLogging"
    ],
)

# Uncomment if documentation generation is needed
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
# swift_package(
#     name = "docc_documentation"
#     srcs = glob([
#         "**/*.swift"
#         "**/*.docc/**"
#     ])
#     deps = [
#         "//Sources/CoreDTOs"
#         "//Sources/ErrorHandling"
#         "//Sources/ObjCBridgingTypesFoundation"
#         "//Sources/UmbraLogging"
#     ]
# )
