load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "CoreErrors",
    srcs = glob(
        ["*.swift"]
,  # Swift files are directly in this directory, not in a Sources subdirectory
        allow_empty = False,  # Don't allow empty to ensure we catch missing files
    ),
    visibility = ["//visibility:public"],
    deps = [
        # No direct dependency on UmbraErrors to avoid circular dependency
        "//Sources/ErrorHandlingInterfaces",
    ],
)

# Uncomment if documentation generation is needed
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
#
# swift_package(
#     name = "docc_documentation",
#     srcs = glob([
#         "**/*.swift",
#         "**/*.docc/**",
#     ] , allow_empty = True),
#     deps = ["//Sources/CoreErrors"],
# )
