load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "CoreServicesTypes",
    srcs = glob(
        [
            "*.swift",
            "**/*.swift",
        ],
        allow_empty = False,
        exclude = [
            "**/Tests/**",
            "**/*Test.swift",
            "**/*.generated.swift",
        ],
        exclude_directories = 1,
    ),
    visibility = [
        "//Sources/Services:__pkg__",
        "//visibility:public",
    ],
    deps = [
        # Dependencies will go here, for example:
        # "//Sources/CoreDTOs",
        # "//Sources/UmbraLogging",
        # "@com_github_apple_swift_log//:Logging",
    ],
)
