load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "CoreTypesImplementation",
    srcs = glob(
        ],  # Only include Swift files at this level
        allow_empty = False,
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/CoreTypesImplementation/Sources:CoreTypesImplementationSources",
        "//Sources/CoreTypesInterfaces",
        "//Sources/ErrorHandlingInterfaces",
        "//Sources/UmbraCoreTypes",
    ],
)

# Test library target for CoreTypesImplementation
swift_library(
    name = "CoreTypesImplementationTests",
    testonly = True,
    srcs = glob(
        ["Tests/*.swift"],
        allow_empty = False,
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":CoreTypesImplementation",
        "//Sources/CoreTypesInterfaces",
    ],
)

# Uncomment if documentation generation is needed
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
#
# swift_package(
#     name = "docc_documentation",
#     srcs = glob([
#         "**/*.swift",
#         "**/*.docc/**",
#     ] , allow_empty = False),
#     deps = ["//Sources/CoreTypesImplementation"],
# )
