load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "CoreTypesInterfaces",
    srcs = ["Exports.swift"],
    module_name = "CoreTypesInterfaces",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/CoreTypesInterfaces/Sources:CoreTypesInterfacesSources",
    ],
)

# Uncomment if documentation generation is needed
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
#
# swift_package(
#     name = "docc_documentation",
#     deps = ["//Sources/CoreTypesInterfaces"],
# )

# Add a test library target for CoreTypesInterfaces
swift_library(
    name = "CoreTypesInterfacesTests",
    testonly = True,
    srcs = glob(
        ],
        allow_empty = False,  # Changed to allow empty to prevent build failures
    ),
    module_name = "CoreTypesInterfacesTests",
    visibility = ["//visibility:public"],
    deps = [
        ":CoreTypesInterfaces",
    ],
)
