# IMPORTANT: In accordance with UmbraCore typealias policy:
# - Prefer fully qualified types over typealiases
# - Only use typealiases when interfacing with external APIs or simplifying complex generic signatures
# - Typealias declarations require explicit justification in code comments
# See the typealias policy document for details.

load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "CoreTypesInterfaces",
    srcs = glob(["**/*.swift"]),
    visibility = [
        "//Sources/SecurityInterfaces:__pkg__",
        "//visibility:public",
    ],
    deps = [
        # Dependencies will go here, for example:
        # "//Sources/CoreDTOs",
        # "//Sources/UmbraLogging",
        # "@com_github_apple_swift_log//:Logging",
    ],
)
