# IMPORTANT: In accordance with UmbraCore typealias policy:
# - Prefer fully qualified types over typealiases
# - Only use typealiases when interfacing with external APIs or simplifying complex generic signatures
# - Typealias declarations require explicit justification in code comments
# See the typealias policy document for details.

load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "CoreTypesInterfaces",
    srcs = glob(
        [
            "*.swift",
            "**/*.swift"
        ],
        allow_empty = False,
        exclude = [
            "**/Tests/**",
            "**/*Test.swift",
            "**/*.generated.swift"
        ],
        exclude_directories = 1,
    ),
    visibility = [
        "//Sources/SecurityInterfaces:__pkg__",
        "//visibility:public"
    ],
    deps = [
        "//Sources/CoreTypesInterfaces/Sources:CoreTypesInterfacesSources"
    ],
)
