load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "Crypto",
    srcs = glob(["**/*.swift"], allow_empty = True),
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/CryptoTypes", 
        "//Sources/CryptoTypes/Types:CryptoTypesTypes",
        "//Sources/SecurityImplementation/Sources/CryptoService",
    ],
)
