load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "CryptoInterfaces",
    srcs = glob(
        [
            "*.swift",
            "**/*.swift",
        ],
        allow_empty = True,  # Allow empty for now as we're just setting up the structure
        exclude = [
            "**/Tests/**",
            "**/*Test.swift",
            "**/*.generated.swift",
        ],
        exclude_directories = 1,
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/UmbraCoreTypes",
        "//Sources/UmbraCoreTypes/Sources:UmbraCoreTypes",
    ],
)
