load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "CryptoSwiftFoundationIndependent",
    srcs = glob(["*.swift", "**/*.swift"],
        exclude = ["**/Tests/**", "**/*Test.swift", "**/*.generated.swift"],
        exclude_directories = 1,
        allow_empty = True
    ),
    deps = [
        "//Sources/UmbraCoreTypes",
        "@swiftpkg_cryptoswift//:CryptoSwift",
    ],
    visibility = ["//visibility:public"],
)
