load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "CryptoSwiftFoundationIndependent",
    srcs = glob(
        [
            "*.swift",
            "**/*.swift",
        ],
        allow_empty = False,
        exclude = [
            "**/Tests/**",
            "**/*Test.swift",
            "**/*.generated.swift",
        ],
        exclude_directories = 1,
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/UmbraCoreTypes",
        "@swiftpkg_cryptoswift//:CryptoSwift",
    ],
)
