load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "CryptoTypes",
    srcs = glob(
        ["*.swift"]
,  # Only include Swift files at the root level
        allow_empty = False,
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/CryptoTypes/Types:CryptoTypesTypes",
        "//Sources/CoreTypesInterfaces",
        "//Sources/ErrorHandling",
    ],
)

# Uncomment if documentation generation is needed
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
#
# swift_package(
#     name = "docc_documentation",
#     srcs = glob([
#         "**/*.swift",
#         "**/*.docc/**",
#     ] , allow_empty = False),
#     deps = ["//Sources/CryptoTypes"],
# )
