# Error handling improvements:
# This module has been updated to use fully qualified error types instead of typealiases.
# All error mapping should follow the UmbraErrors.* canonical hierarchy.
# Ensure proper error propagation and mapping when adding new code.

load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "CryptoTypes",
    srcs = glob(["*.swift", "**/*.swift"],
        exclude = ["**/Tests/**", "**/*Test.swift", "**/*.generated.swift"],
        exclude_directories = 1,
        allow_empty = True
    ),
    deps = [
        "//Sources/SecurityBridgeTypes/Sources:SecurityBridgeTypes",
        "//Sources/SecurityProtocolsCore/Sources:SecurityProtocolsCore",
        "//Sources/UmbraCoreTypes/Sources:UmbraCoreTypes",
        "//Sources/UmbraErrors:UmbraErrors",
        "//Sources/UmbraErrors/Core:UmbraErrorsCore",
        "//Sources/XPCProtocolsCore",
        # Other possible dependencies based on other files in this module:
        # "//Sources/CoreDTOs",
        # "//Sources/UmbraLogging",
        # "@com_github_apple_swift_log//:Logging",
    ],
)

# Uncomment if documentation generation is needed
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
#
# swift_package(
#     name = "docc_documentation",
#     srcs = glob([
#         "**/*.swift",
#         "**/*.docc/**",
#     ]),
#     deps = ["//Sources/CryptoTypes"],
# )
