load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "ErrorHandling",
    srcs = glob(
        ["*.swift"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/CoreTypesInterfaces",
        "//Sources/ErrorHandlingInterfaces",
        "//Sources/LoggingWrapperInterfaces",
    ],
)

# Uncomment if documentation generation is needed
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
#
# swift_package(
#     name = "docc_documentation",
#     srcs = glob([
#         "**/*.swift",
#         "**/*.docc/**",
#     ] , allow_empty = True),
#     deps = ["//Sources/ErrorHandling"],
# )
