# IMPORTANT: In accordance with UmbraCore typealias policy:
# - Prefer fully qualified types over typealiases
# - Only use typealiases when interfacing with external APIs or simplifying complex generic signatures
# - Typealias declarations require explicit justification in code comments
# See the typealias policy document for details.

load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "ErrorHandling",
    srcs = glob(
        [
            "*.swift",
            "**/*.swift"
        ],
        allow_empty = False,
        exclude = [
            "**/Tests/**",
            "**/*Test.swift",
            "**/*.generated.swift"
        ],
        exclude_directories = 1,
    ),
    deps = [
        # Dependencies will go here, for example:
        # "//Sources/CoreDTOs"
        # "//Sources/UmbraLogging"
        # "@com_github_apple_swift_log//:Logging"
        "//Sources/UmbraErrors/Core:UmbraErrorsCore",  # Add UmbraErrorsCore dependency
    ],
)

# Uncomment if documentation generation is needed
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
# swift_package(
#     name = "docc_documentation"
#     srcs = glob([
#     srcs = glob([
#         "**/*.swift"
#         "**/*.docc/**"
#     ])
#     ])
# deps = [
#     # Dependencies would go here"//Sources/ErrorHandling"]
# deps = [
#     # Dependencies would go here"//Sources/ErrorHandling"]
# deps = [
#     # Dependencies would go here"//Sources/ErrorHandling"]
# deps = [
#     # Dependencies would go here"//Sources/ErrorHandling"]
# )
