load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "ErrorHandlingInterfaces",
    srcs = glob(
        ["*.swift"]
,
        allow_empty = False,
    ),
    visibility = ["//visibility:public"],
    deps = [
        # No dependencies for the interfaces module
    ],
)

# Uncomment if documentation generation is needed
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
#
# swift_package(
#     name = "docc_documentation",
#     srcs = glob([
#         "**/*.swift",
#         "**/*.docc/**",
#     ] , allow_empty = False),
#     deps = ["//Sources/ErrorHandlingInterfaces"],
# )
