load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "FileSystemService",
    srcs = glob(
        [
            "*.swift",
            "**/*.swift"
        ],
        allow_empty = True,  # Allow empty since all Swift files are in subdirectories
        exclude = [
            "**/Tests/**",
            "**/*Test.swift",
            "**/*.generated.swift"
        ],
        exclude_directories = 1,
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/Core/Services/Types",
        "//Sources/CoreDTOs",
        "//Sources/ErrorHandlingDomains",
        "//Sources/FileSystemService/Adapters",
        "//Sources/FileSystemTypes",
        "//Sources/UmbraCoreTypes",
        "//Sources/UmbraErrors"
    ],
)
