load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "KeyManagementTypes",
    srcs = glob([
        "*.swift",
        "Sources/*.swift",
    ]),
    visibility = ["//visibility:public"],
)

# For tests
umbra_swift_library(
    name = "KeyManagementTypesTests",
    testonly = True,
    srcs = glob(["*.swift", "**/*.swift"],
        exclude = ["**/Tests/**", "**/*Test.swift", "**/*.generated.swift"],
        exclude_directories = 1,
        allow_empty = True
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":KeyManagementTypes",
    ],
)

# Uncomment if documentation generation is needed
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
#
# swift_package(
#     name = "docc_documentation",
#     srcs = glob([
#         "**/*.swift",
#         "**/*.docc/**",
#     ]),
#     deps = ["//Sources/KeyManagementTypes"],
# )
