load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "LoggingWrapper",
    srcs = glob(["*.swift", "**/*.swift"],
        exclude = ["**/Tests/**", "**/*Test.swift", "**/*.generated.swift"],
        exclude_directories = 1,
        allow_empty = True
    ),
    deps = [
        "//Sources/LoggingWrapperInterfaces",
    ],
    visibility = ["//visibility:public"],
)

# Uncomment if documentation generation is needed
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
#
# swift_package(
#     name = "docc_documentation",
#     srcs = glob([
#         "**/*.swift",
#         "**/*.docc/**",
#     ]),
#     deps = ["//Sources/LoggingWrapper"],
# )
