load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "ObjCBridgingTypesFoundation",
    srcs = glob(
        ["*.swift"]
,
        allow_empty = False,
    ),
    deps = [
        "//Sources/CoreErrors",
        "//Sources/ErrorHandlingDomains",
        "//Sources/XPCProtocolsCore",
    ],
)

# Uncomment if documentation generation is needed
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
#
# swift_package(
#     name = "docc_documentation",
#     srcs = glob([
#         "**/*.swift",
#         "**/*.docc/**",
#     ] , allow_empty = False),
#     deps = ["//Sources/ObjCBridgingTypesFoundation"],
#    visibility = #    visibility = # = ["//visibility:public"] 
    # visibility = ["//visibility:public"],
)
